# AgentMesh

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agentmesh/: __init__.py  cli.py
agentmesh/adapters/: __init__.py  autogen.py
agentmesh/core/: __init__.py  config.py  runtime.py
agentmesh/examples/: __init__.py
agentmesh/examples/deep_research/: __init__.py  __main__.py  demo.py
agentmesh/mechanisms/: __init__.py
agentmesh/mechanisms/esf/: __init__.py  controller.py
agentmesh/mechanisms/srr/: __init__.py  cache.py
agentmesh/mechanisms/tsd/: __init__.py  attention.py
agentmesh/proto/: __init__.py  agentmesh.proto
agentmesh/sidecars/: __init__.py  sidecar.py
benchmarks/: __init__.py  benchmark_esf.py  benchmark_srr.py  benchmark_tsd.py
docs/: api_reference.md  architecture.md  esf.md  getting_started.md  srr.md  tsd.md
tests/: __init__.py  conftest.py  test_deep_research.py  test_esf.py  test_runtime.py  test_srr.py  test_tsd.py
