[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0"
description = "Semantic Communication for Multi-Agent Systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anonymous", email = "259918803+AgentMesh-project@users.noreply.github.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["multi-agent", "llm", "semantic-communication", "kv-cache", "streaming"]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.21.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "tqdm>=4.64.0",
    "coloredlogs>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.260",
]
autogen = [
    "autogen-agentchat>=0.4.2",
    "autogen-ext>=0.4.2",
]
vllm = [
    "vllm>=0.13.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AgentMesh-project/AgentMesh"
Repository = "https://github.com/AgentMesh-project/AgentMesh.git"
Issues = "https://github.com/AgentMesh-project/AgentMesh/issues"

[project.scripts]
agentmesh = "agentmesh.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentmesh*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
